[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemy/EnemySpawner.gd" type="Script" id=1]
[ext_resource path="res://sfx/Inimigo.mp3" type="AudioStream" id=2]
[ext_resource path="res://sfx/inimigomorrendo.mp3" type="AudioStream" id=3]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPosition_01" type="Position2D" parent="SpawnPositions"]
position = Vector2( 640, 45 )

[node name="SpawnPosition_02" type="Position2D" parent="SpawnPositions"]
position = Vector2( 640, 115 )

[node name="SpawnPosition_03" type="Position2D" parent="SpawnPositions"]
position = Vector2( 640.749, 180 )

[node name="SpawnPosition_04" type="Position2D" parent="SpawnPositions"]
position = Vector2( 640, 245 )

[node name="SpawnPosition_05" type="Position2D" parent="SpawnPositions"]
position = Vector2( 640, 315 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="enemySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="enemyDying" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="add_score" from="." to="." method="_on_EnemySpawner_add_score"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
